# adk-research

./: .gitignore  README.md  copy.toml  pyproject.toml
10-sequential-agent/: README_zh.md
10-sequential-agent/lead_qualification_agent/: agent.py
11-parallel-agent/: README_zh.md
11-parallel-agent/system_monitor_agent/: agent.py
12-loop-agent/: README_zh.md
12-loop-agent/linkedin_post_agent/: __init__.py  agent.py
2-tool-agent/tool_agent/: agent.py
5-sessions-and-state/: basic_stateful_session.py
7-multi-agent/: README_zh.md
8-stateful-multi-agent/: README_zh.md  main.py  utils.py
8-stateful-multi-agent/customer_service_agent/: agent.py
9-callbacks/: README_zh.md
litellm-test/: agent.py
mlb-data/: ALL_DATABASE_SCHEMA.md  ALL_QUERY_EXAMPLES.md  QUERY_EXAMPLES.md  ohtani_gamelog_scraper.py  ohtani_splits_scraper.py
mlb-data/database_schema/: batting_season_stats.md  pitching_game_logs.md  pitching_season_stats.md
mlb-data/query_examples/: batting_season_overview.md  batting_statistical_analysis.md  clutch_performance_analysis.md  efficiency_metrics_analysis.md  excellent_performance_filter.md  pitching_statistical_analysis.md  recent_batting_performance.md  recent_pitching_performance.md  season_combined_performance.md  specific_opponent_performance.md
research-ohtani/: README.md
research-ohtani-mcp/: README.md  requirements.txt  test_agent.py
research-ohtani-mcp/head_coach_agent/: agent.py  prompt.py
research-ohtani/head_coach_agent/: __init__.py  agent.py
research-quickstart/built_in_tool_agent/: agent.py
(+62 files in other folders)
