[project]
name = "adk-research"
version = "0.1.0"
description = ""
authors = [
    {name = "ianchen-tech",email = "ianchentech@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "google-adk (>=1.7.0,<2.0.0)",
    "litellm (>=1.74.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
